Added curl command line to dockerfile

--- a/docstrings_testing/meal_max/Dockerfile
+++ b/docstrings_testing/meal_max/Dockerfile
@@ -15,6 +15,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Install SQLite3
 RUN apt-get update && apt-get install -y sqlite3
+RUN apt-get update && apt-get install -y sqlite3 curl
 
 # Add a shell script that loads the .env file and handles database creation
 COPY ./sql/create_db.sh /app/sql/create_db.sh
