continuing to work on smoketests

--- a/watchlist/Dockerfile
+++ b/watchlist/Dockerfile
@@ -4,8 +4,13 @@ FROM python:3.9-slim
 # Set the working directory in the container
 WORKDIR /app
 
+ENV PYTHONPATH=/app 
+
 # Copy the current directory contents into the container at /app
 COPY . /app
+
+# Ensure the 'sql' directory is copied correctly
+COPY sql /app/sql
 
 # Copy the env file to the container
 COPY .env /app/.env
