working on smoketests

--- a/watchlist/.env
+++ b/watchlist/.env
@@ -1,3 +1,6 @@
-DB_PATH=/app/db/movie_catalog.db
-SQL_CREATE_TABLE_PATH=/app/sql/create_movie_table.sql
+# DB_PATH=/app/db/movie_catalog.db
+# SQL_CREATE_TABLE_PATH=/app/sql/create_movie_table.sql
+# CREATE_DB=true
+DB_PATH=./db/movie_catalog.db
+SQL_CREATE_TABLE_PATH=./sql/create_movie_table.sql
 CREATE_DB=true
